force-app/main/default/objects/Income_Expense__c/Income_Expense__c.object-meta.xml
<CustomObject>
    <label>Income - Expense</label>
    <nameField>
        <displayFormat>IE-{00000}</displayFormat>
        <label>Income - Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incomes - Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>