force-app/main/default/objects/Income_Expense__c/fields/Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Amount__c</fullName>
    <label>Expense Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower than 100.00 Baht</fullName>
            </value>
            <value>
                <fullName>100,000 Baht - 500,000 Baht</fullName>
            </value>
            <value>
                <fullName>500,000 Baht - 1,000,000 Baht</fullName>
            </value>
            <value>
                <fullName>1,000,000 Baht - 5,000,000 Baht</fullName>
            </value>
            <value>
                <fullName>More than 5,000,000 Baht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>