force-app/main/default/objects/Income_Expense__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education Fee</fullName>
            </value>
            <value>
                <fullName>Rental Fee</fullName>
            </value>
            <value>
                <fullName>Pay Wages</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Vehicle Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>