force-app/main/default/objects/Income_Expense__c/fields/Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Income_Amount__c</fullName>
    <label>Income Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower than 300,000 Baht</fullName>
            </value>
            <value>
                <fullName>300,000 Baht - 1,000,000 Baht</fullName>
            </value>
            <value>
                <fullName>1,000,000 Baht - 3.000.000 Baht</fullName>
            </value>
            <value>
                <fullName>3,000,000 Baht - 10,000,000 Baht</fullName>
            </value>
            <value>
                <fullName>More than 10,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>