force-app/main/default/objects/Income_Expense__c/fields/Income_Category__c.field-meta.xml
<CustomField>
    <fullName>Income_Category__c</fullName>
    <label>Income Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Interest - Dividend</fullName>
            </value>
            <value>
                <fullName>Income from Business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ค่าเช่า</fullName>
                <isActive>false</isActive>
                <label>ค่าเช่า</label>
            </value>
            <value>
                <fullName>รายได้จากธุรกิจ</fullName>
                <isActive>false</isActive>
                <label>รายได้จากธุรกิจ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>