force-app/main/default/objects/Income_Expense__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark</label>
    <type>TextArea</type>
</CustomField>